--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     // Dependencies variables
     def room_version = '2.2.1'
     def lifecycle_version = "2.1.0"
+    def recyclerview_version = "1.0.0"
+    def cardview_version = "1.0.0"
+
 
 
     // Default
@@ -39,6 +42,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
+    // CardView and RecyclerView
+    implementation "androidx.cardview:cardview:$cardview_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
